:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="carousel-item active">
             <img src="images/1.jpg" alt="">
           </div>
-       
+
           <div class="carousel-item">
             <img src="images/2.jpg" alt="">
           </div>
@@ -177,18 +177,17 @@
                       <div class="col-md-8 col-lg-8 ">
                         <div class="detail-box">
                           <h1>
-                            Fast Food Restaurant 1
+                            ¿Se debe hacer reserva?
                           </h1>
                           <p>
-                            Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum
-                            quam
-                            quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni
-                            quos
-                            nihil ducimus libero ipsam.
+                            Se pueden hacer reservas de lunes a viernes, con motivos de cumpleaños, reunión, etc.
+                            Sujeto a disposición.
+                            Fines de semana no se hacen reservas, es por orden de llegada.
+
                           </p>
                           <div class="btn-box">
                             <a href="" class="btn1">
-                              Order Now
+                              Ordenar Ahora
                             </a>
                           </div>
                         </div>
@@ -203,18 +202,17 @@
                       <div class="col-md-8 col-lg-8 ">
                         <div class="detail-box">
                           <h1>
-                            Fast Food Restaurant 2
+                            ¿Puedo llevar niños?
                           </h1>
                           <p>
-                            Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum
-                            quam
-                            quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni
-                            quos
-                            nihil ducimus libero ipsam.
+                            Si, Food World es un ambiente familiar para compartir.
+                            Tenemos una carta especial para niños y juegos didácticos para ellos.
+                            <br>
+                            <br>
                           </p>
                           <div class="btn-box">
                             <a href="" class="btn1">
-                              Order Now
+                              Ordenar Ahora
                             </a>
                           </div>
                         </div>
@@ -229,18 +227,17 @@
                       <div class="col-md-8 col-lg-8 ">
                         <div class="detail-box">
                           <h1>
-                            Fast Food Restaurant 3
+                            ¿Cómo adquirir una Gift Card?
                           </h1>
                           <p>
-                            Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum
-                            quam
-                            quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni
-                            quos
-                            nihil ducimus libero ipsam.
+                            Puedes adquirirla acercándote a nuestras tiendas o por llamando a nuestros números +01
+                            5738267 / +51 922582740
+                            <br>
+                            <br>
                           </p>
                           <div class="btn-box">
                             <a href="" class="btn1">
-                              Order Now
+                              Ordenar Ahora
                             </a>
                           </div>
                         </div>
@@ -1128,14 +1125,16 @@
             <div class="box">
               <div class="detail-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim veniam
+                  ¡Me encanta el servicio!
+                  Cuando visite Food World me sentí como en casa, los meseros son lo máximo!
+                  <br>
+                  <br>
                 </p>
                 <h6>
-                  Moana Michell
+                  Rosa Díaz
                 </h6>
                 <p>
-                  magna aliqua
+                  Excelente!
                 </p>
               </div>
               <div class="img-box">
@@ -1147,18 +1146,62 @@
             <div class="box">
               <div class="detail-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim veniam
+                  Excelente lugar para celebrar cumpleaños
+                  Fui a celebrar mi cumpleaños, el personal se acerco a cantarme happy birthday al estilo Food World y
+                  me obsequiaron un lindo pastel.
+
                 </p>
                 <h6>
-                  Mike Hamell
+                  Carlos Fernández
                 </h6>
                 <p>
-                  magna aliqua
+                 Hermoso!
                 </p>
               </div>
               <div class="img-box">
                 <img src="images/client2.jpg" alt="" class="box-img">
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="detail-box">
+                <p>
+                  Recomendado al 100%
+                  Super amables, desde la puerta de ingreso, son serviciales y la comida deliciosa.
+                  <br><br>
+
+                </p>
+                <h6>
+                 Miguel Soto
+                </h6>
+                <p>
+                  Genial!
+                </p>
+              </div>
+              <div class="img-box">
+                <img src="images/client3.jpg" alt="" class="box-img">
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="detail-box">
+                <p>
+                  ¡Las promos son de locura!
+                  Me pedí 3 platos de la carta por el precio de dos, Sali fascinada con las promociones.
+
+                  <br><br>
+                </p>
+                <h6>
+                  Esteban Arévalo
+                </h6>
+                <p>
+                  Divertido!
+                </p>
+              </div>
+              <div class="img-box">
+                <img src="images/client4.jpg" alt="" class="box-img">
               </div>
             </div>
           </div>
@@ -1188,13 +1231,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Llamar +01 1234567890
+                  Llamar +01 5738267
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  contacto@foodworld.com
                 </span>
               </a>
             </div>
@@ -1206,8 +1249,12 @@
               Food World
             </a>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
-              words, combined with
+              Carta
+              Promociones
+              Locales
+              Nosotros
+
+
             </p>
             <div class="footer_social">
               <a href="">
