--- a/reparto.html
+++ b/reparto.html
@@ -205,13 +205,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Llamar +01 1234567890
+                  Llamar +01 5738267
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  contacto@foodworld.com
                 </span>
               </a>
             </div>
@@ -223,8 +223,12 @@
               Food World
             </a>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
-              words, combined with
+              Carta
+              Promociones
+              Locales
+              Nosotros
+              
+
             </p>
             <div class="footer_social">
               <a href="">
