:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Tasty Thursdays
+                  Hamburgesas
                 </h5>
                 <h6>
                   <span>20%</span> de descuento
@@ -312,7 +312,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Pizza Days
+                  Pizzas
                 </h5>
                 <h6>
                   <span>15%</span> de descuento
@@ -356,7 +356,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Tasty Thursdays
+                  Papas Fritas
                 </h5>
                 <h6>
                   <span>16%</span> de descuento
@@ -397,7 +397,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Pizza Days
+                  Papas Fritas
                 </h5>
                 <h6>
                   <span>18%</span> de descuento
@@ -441,7 +441,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Pastas
+                  Lagsañas
                 </h5>
                 <h6>
                   <span>10%</span> de descuento
