:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Hamburgesas
+                  Hamburguesas
                 </h5>
                 <h6>
                   <span>20%</span> de descuento
@@ -441,7 +441,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Lagsañas
+                  Lagañas
                 </h5>
                 <h6>
                   <span>10%</span> de descuento
