:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Papas Fritas
+                  Combos
                 </h5>
                 <h6>
                   <span>18%</span> de descuento
