--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Lagañas
+                  Lasañas
                 </h5>
                 <h6>
                   <span>10%</span> de descuento
