--- a/reparto.html
+++ b/reparto.html
@@ -76,6 +76,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">Nosotros</a>
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="https://ishara95t.wixsite.com/foodworl">Tienda</a>
+              </li>
+
             </ul>
             <div class="user_option">
               <a href="" class="user_link">
