:hammer: trabajo Ishara wix

--- a/combos.html
+++ b/combos.html
@@ -69,7 +69,7 @@
                 <a class="nav-link" href="combos.html">Combos <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="reparto.html">Zonas de Reparto</a>
+                <a class="nav-link" href="reparto.html">Reparto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">Nosotros</a>
