--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 <a class="nav-link" href="combos.html">Combos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="reparto.html">Zonas de Reparto</a>
+                <a class="nav-link" href="reparto.html">Reparto</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">Nosotros <span class="sr-only">(current)</span> </a>
