--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
               <li class="nav-item">
-                <a class="nav-link" href="reparto.html">Zonas de Reparto</a>
+                <a class="nav-link" href="reparto.html">Reparto</a>
               </li>
 
               <li class="nav-item">
