--- a/reparto.html
+++ b/reparto.html
@@ -70,7 +70,7 @@
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="reparto.html">Zonas de Reparto <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="reparto.html">Reparto <span class="sr-only">(current)</span> </a>
               </li>
 
               <li class="nav-item">
